--- a/MofTest/MofTest.csproj
+++ b/MofTest/MofTest.csproj
@@ -2,12 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MofBootstrapLib\MofBootstrapLib.csproj" />
+    <PackageReference Include="MetaDslx.BuildTasks" Version="0.10.218" />
+    <PackageReference Include="MetaDslx.CodeAnalysis" Version="0.10.218" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.5.0" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MofImplementationLib\MofImplementationLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
